--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "single-spa": "^5.9.4",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4",
-    "query-string": "^7.1.1"
+    "query-string": "^7.1.1",
+    "single-spa-react": "^4.3.1",
+    "@types/systemjs": "^6.1.1",
+    "@types/webpack-env": "^1.16.2"
   },
   "author": "",
   "license": "MIT"
