--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 node_modules
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+
+
+# cache
+packages/apps/app3/.angular
+packages/apps/app4/.angular
+packages/apps/shell/node_modules
+
+
 
 # testing
 /coverage
@@ -20,3 +24,45 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+# Compiled output
+/dist
+/tmp
+/out-tsc
+/bazel-out
+
+# Node
+/node_modules
+npm-debug.log
+yarn-error.log
+
+# IDEs and editors
+.idea/
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
+# Miscellaneous
+/.angular/cache
+.sass-cache/
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
+
+# System files
+.DS_Store
+Thumbs.db
