--- a/package.json
+++ b/package.json
@@ -2,35 +2,94 @@
   "name": "@jc/single-spa-cra-shell",
   "version": "1.0.0",
   "description": "single-spa with shell cra-react",
+  "license": "MIT",
+  "author": "",
   "main": "index.js",
   "workspaces": [
     "/packages/apps/*"
   ],
   "scripts": {
     "start:shell": "npm run start --workspace=@jc/shell",
-    "build:shell": "npm run build --workspace=@jc/shell",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:app1": "npm run start --workspace=@jc/app1",
+    "start:app2": "npm run start --workspace=@jc/app2",
+    "start:app3": "npm run start --workspace=@jc/app3",
+    "start:app4": "npm run start --workspace=@jc/app4"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@angular/animations": "^14.2.0",
+    "@angular/common": "^14.2.0",
+    "@angular/compiler": "^14.2.0",
+    "@angular/core": "^14.2.0",
+    "@angular/forms": "^14.2.0",
+    "@angular/platform-browser": "^14.2.0",
+    "@angular/platform-browser-dynamic": "^14.2.0",
+    "@angular/router": "^14.2.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.64",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
-    "single-spa": "^5.9.4",
-    "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4",
-    "query-string": "^7.1.1",
-    "single-spa-react": "^4.3.1",
+    "@types/jest": "^27.0.1",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.9",
     "@types/systemjs": "^6.1.1",
-    "@types/webpack-env": "^1.16.2"
+    "@types/webpack-env": "^1.16.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "6",
+    "rxjs": "~7.5.0",
+    "single-spa": "^5.9.3",
+    "single-spa-angular": "^7.1.0",
+    "single-spa-react": "^4.3.1",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
-  "author": "",
-  "license": "MIT"
+  "devDependencies": {
+    "@angular-builders/custom-webpack": "14.0.1",
+    "@angular-devkit/build-angular": "^14.2.5",
+    "@angular/cli": "~14.2.5",
+    "@angular/compiler-cli": "^14.2.0",
+    "@babel/core": "^7.15.0",
+    "@babel/eslint-parser": "^7.15.0",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
+    "@babel/runtime": "^7.15.3",
+    "@types/jasmine": "~4.0.0",
+    "@types/node": "^16.11.64",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/testing-library__jest-dom": "^5.14.1",
+    "@vitejs/plugin-react": "^2.1.0",
+    "babel-jest": "^27.0.6",
+    "concurrently": "^6.2.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-ts-react-important-stuff": "^3.0.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jasmine-core": "~4.3.0",
+    "jest": "^27.0.6",
+    "jest-cli": "^27.0.6",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "prettier": "^2.3.2",
+    "pretty-quick": "^3.1.1",
+    "query-string": "^7.1.1",
+    "style-loader": "^3.3.1",
+    "ts-config-single-spa": "^3.0.0",
+    "typescript": "^4.3.5",
+    "vite": "^3.1.6",
+    "vite-plugin-svgr": "^2.2.1",
+    "vite-tsconfig-paths": "^3.5.1",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.10.0",
+    "webpack-config-single-spa-react": "^4.0.0",
+    "webpack-config-single-spa-react-ts": "^4.0.0",
+    "webpack-config-single-spa-ts": "^4.0.0",
+    "webpack-dev-server": "^4.0.0",
+    "webpack-merge": "^5.8.0"
+  }
 }
