--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "/packages/lib/*"
   ],
   "scripts": {
+    "start:all": " npm run start:shell & npm run start:app1 & npm run start:app2 & npm run start:app3 & npm run start:app4",
     "start:shell": "npm run start --workspace=@jc/shell",
     "start:app1": "npm run start --workspace=@jc/app1",
     "start:app2": "npm run start --workspace=@jc/app2",
@@ -61,7 +62,6 @@
     "@types/testing-library__jest-dom": "^5.14.1",
     "@vitejs/plugin-react": "^2.1.0",
     "babel-jest": "^27.0.6",
-    "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -76,8 +76,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "prettier": "^2.3.2",
-    "pretty-quick": "^3.1.1",
     "query-string": "^7.1.1",
     "style-loader": "^3.3.1",
     "ts-config-single-spa": "^3.0.0",
@@ -87,7 +85,6 @@
     "vite-tsconfig-paths": "^3.5.1",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.10.0",
-    "webpack-config-single-spa-react": "^4.0.0",
     "webpack-config-single-spa-react-ts": "^4.0.0",
     "webpack-config-single-spa-ts": "^4.0.0",
     "webpack-dev-server": "^4.0.0",
