--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
     "/packages/lib/*"
   ],
   "scripts": {
+    "build:all": " npm run build:shell & npm run build:app1 & npm run build:app2 & npm run build:app3 & npm run build:app4",
+    "build:app1": "npm run build:prod --workspace=@jc/app1",
+    "build:app2": "npm run build:prod --workspace=@jc/app2",
+    "build:app3": "npm run build:prod --workspace=@jc/app3",
+    "build:app4": "npm run build:prod --workspace=@jc/app4",
+    "build:auth": "npm run build:prod --workspace=@jc/auth",
+    "build:shell": "npm run build:prod --workspace=@jc/shell",
     "start:all": " npm run start:shell & npm run start:app1 & npm run start:app2 & npm run start:app3 & npm run start:app4",
-    "start:shell": "npm run start --workspace=@jc/shell",
     "start:app1": "npm run start --workspace=@jc/app1",
     "start:app2": "npm run start --workspace=@jc/app2",
     "start:app3": "npm run start --workspace=@jc/app3",
-    "start:app4": "npm run start --workspace=@jc/app4"
+    "start:app4": "npm run start --workspace=@jc/app4",
+    "start:auth": "npm run start --workspace=@jc/auth",
+    "start:shell": "npm run start --workspace=@jc/shell"
   },
   "dependencies": {
     "@angular/animations": "^14.2.0",
@@ -34,6 +42,8 @@
     "@types/react-dom": "^17.0.9",
     "@types/systemjs": "^6.1.1",
     "@types/webpack-env": "^1.16.2",
+    "primeicons": "^6.0.1",
+    "primeng": "^14.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
@@ -49,6 +59,7 @@
     "@angular-devkit/build-angular": "^14.2.5",
     "@angular/cli": "~14.2.5",
     "@angular/compiler-cli": "^14.2.0",
+    "@apollo/client": "^3.6.9",
     "@babel/core": "^7.15.0",
     "@babel/eslint-parser": "^7.15.0",
     "@babel/plugin-transform-runtime": "^7.15.0",
@@ -56,13 +67,17 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@babel/runtime": "^7.15.3",
+    "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^16.11.64",
     "@types/react-router-dom": "^5.3.3",
     "@types/testing-library__jest-dom": "^5.14.1",
     "@vitejs/plugin-react": "^2.1.0",
     "babel-jest": "^27.0.6",
+    "cross-domain-storage": "^2.0.7",
     "cross-env": "^7.0.3",
+    "crypto-js": "^4.1.1",
+    "css-loader": "^6.7.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-ts-react-important-stuff": "^3.0.0",
