--- a/packages/apps/app2/package.json
+++ b/packages/apps/app2/package.json
@@ -4,7 +4,7 @@
     "start": "webpack serve",
     "start:standalone": "webpack serve --env standalone",
     "build": "concurrently npm:build:*",
-    "build:webpack": "webpack --mode=production",
+    "build:prod": "webpack --mode=production",
     "analyze": "webpack --mode=production --env analyze",
     "lint": "eslint src --ext js,ts,tsx",
     "format": "prettier --write .",
