--- a/packages/apps/app4/package.json
+++ b/packages/apps/app4/package.json
@@ -7,7 +7,7 @@
     "build:ng": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build": "ng build app4 --configuration production",
+    "build:prod": "ng build app4 --configuration production",
     "start": "ng s --project app4 --disable-host-check --port 4002 --live-reload false"
   },
   "private": true
